--- a/view/reset.html
+++ b/view/reset.html
@@ -22,7 +22,7 @@
         CoinBucket
     </nav>
     <div class="mobile-nav">
-        <a href="index.html">CoinBucket</a>
+        <a href="index.html" style="color:white">CoinBucket</a>
     </div>
 
     <div id="w0-wrapper">
@@ -34,7 +34,7 @@
 
                 <button id="submitButton" type="button" class="pure-button pure-button-primary">Reset</button>
 
-                <div id="alert-email">
+                <div id="alert-email" hidden>
                     An email has been sent to your inbox.<br> You'll be redirect to login in <span id="timer">0</span> sec<br>
                     <a href="login.html" style="color:blue"> Or click here to go to login.</a>
                 </div>
