--- a/view/setting.html
+++ b/view/setting.html
@@ -19,7 +19,7 @@
 
 <body>
     <nav>
-        CoinBucket
+        <a href="index.html" style="color:white">CoinBucket</a>
     </nav>
     <div class="mobile-nav">
         <a href="index.html" style="color:white">CoinBucket</a>
